samples/dockercompose/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basic
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: vote
          servicePort: 80
        path: /vote(/|$)(.*)
      - backend:
          serviceName: results
          servicePort: 80
        path: /results(/|$)(.*)
